
--------------
Feb 12, 2023
Name: Xin Jing
* Always print atomic mass in .out file

--------------
Feb 07, 2023
Name: Xin Jing
* Add density in .out file

----------------
Feb 06, 2023
Name: Xin Jing, Shashikant Kumar
* Change rounding convenction of mesh size to use ceil rather than round
* Update SPMS psps list
* Update testsuite

----------------
Feb 1, 2023
Name: Xin Jing, Shashikant Kumar
* Change r_core from value in pseudopotential file to actual r where projectors are below < 1E-8
* fix SCF time in output file and change name format of output format as SPARC
* update testsuite

----------------
Jan 23, 2023
Name: Xin Jing, Shashikant Kumar
* Change the pseudocharge rb upper bound and the default TOL_PSEUDOCHARGE to 1E-3 * TOL_SCF
* update testsuite and documentation

----------------
Jan 02, 2023
Name: Shashikant Kumar
* Added 'run_local' feature in the testing framework


----------------
Dec 11, 2022
Name: Shashikant Kumar
* Updated the version number printing on the top of .out file to be same as SPARC
* Updated test suite reference files

----------------
Nov 23, 2022
Name: Xin Jing
* Fix the issue in hybrid outer loop for creating ACE operator for additional time
* Update testsuite
* Change MINIT_SCF to 2


--------------
Nov 22, 2022
Name: Shashikant Kumar
Changes: (psps/)
* Updated the SPMS pseudopotential (with new citation)

----------------
Nov 16, 2022
Name: Xin Jing
* Update force and stress expression
* Update default TOL_SCF model for energy and force accuracy
* Update testsuite
* Add one error message in d3 initialization

  ----------------
+Nov 14, 2022
+Name: Shashikant Kumar
+* Updated testing suite
* Updated doc/manual
* Updated text in the end of .out file

  ----------------
+Nov 10, 2022
+Name: Shashikant Kumar
+* Updated testing suite
* Added SPMS pseudopotentials
 
 ----------------
+Oct 26, 2022
+Name: David Codony
+* Fix a bug in relaxation when LBFGS converges in 1 step.

----------------
Oct 16, 2022
Name: Boqin Zhang