@@ -26,15 +26,15 @@ c = (b+a)/2;
 sigma = e/(a0 - c); sigma1 = sigma;
 gamma = 2/sigma1;
 % HX = H * X;
-HX = h_nonlocal_vector_mult(DL11,DL22,DL33,DG1,DG2,DG3,Veff,X,S,kpt_vec,spin);
-Y = (sigma1/e)*(HX-c*X);
+Y = h_nonlocal_vector_mult(DL11,DL22,DL33,DG1,DG2,DG3,Veff,X,S,kpt_vec,spin);
+Y = (sigma1/e)*(Y-c*X);
 
 ii = 2;
 while(ii <= m)
 	sigma2 = 1/(gamma - sigma);
 	% HX = H * Y;
-	HX = h_nonlocal_vector_mult(DL11,DL22,DL33,DG1,DG2,DG3,Veff,Y,S,kpt_vec,spin);
-	Ynew = (2*sigma2/e)*(HX - c*Y) - ((sigma*sigma2)*X);
+	Ynew = h_nonlocal_vector_mult(DL11,DL22,DL33,DG1,DG2,DG3,Veff,Y,S,kpt_vec,spin);
+	Ynew = (2*sigma2/e)*(Ynew - c*Y) - ((sigma*sigma2)*X);
 	X = Y;
 	Y = Ynew;
 	sigma = sigma2;
